-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
The \qmlabstract command is missing from the qdoc user manual. qdoc still allows the \abstract command but in the wrong context. i.e. the \abstract command was meant for marking up the abstract of a scientific paper. The \abstract command should be made a synonym of \qmlabstract.
For Gerrit Dashboard: QTBUG-46003 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111959,4 | qdoc: Update documentation of \qmlabstract | dev | qt/qtbase | Status: MERGED | +2 | 0 |