qdoc: Update documentation of \qmlabstract

The \qmlabstract command was missing from the qdoc user manual, and
qdoc was still allowing the \abstract command to be used for marking
up the abstract of a scientific paper. The \abstract command is now
made a synonym of \qmlabstract, and they are both added to the qdoc
user manual.

Change-Id: I003ac50b8dabbf037f18d9ea3e6d88a12d69bf5f
Task-number: QTBUG-46003
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>
Reviewed-by: Martin Smith <martin.smith@digia.com>

cregit: 5891f90846738e732b88e0eebfc4fa1eeae7e2c0 https://github.com/qt/qtbase/commit/5891f90846738e732b88e0eebfc4fa1eeae7e2c0